--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
 Flask==2.3.3
 Flask-CORS==4.0.0
-boto3==1.28.85
+boto3>=1.34.0
+botocore>=1.34.0
 python-jose[cryptography]==3.3.0
 reportlab==4.0.4
