--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,15 +2,15 @@
   "name": "legal-chat-bot-frontend",
   "version": "1.0.0",
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "axios": "^1.5.0",
-    "react-router-dom": "^6.15.0",
-    "@mui/material": "^5.14.5",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
-    "react-scripts": "5.0.1"
+    "@mui/material": "^5.14.5",
+    "axios": "^1.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
